[gd_scene load_steps=7 format=3 uid="uid://cn4gn6y85lv6e"]

[ext_resource type="Script" uid="uid://d3l12vxug8rmx" path="res://code/map/map_editor.gd" id="1_ikn3w"]
[ext_resource type="Texture2D" uid="uid://thu4medbs8i" path="res://assets/coin_logo.png" id="1_l5hcm"]
[ext_resource type="TileSet" uid="uid://byyduefph6wqn" path="res://resources/default_tile_set.tres" id="2_rdfmk"]
[ext_resource type="Texture2D" uid="uid://b0ihq0lmiwb65" path="res://assets/coin_blank.png" id="4_8qdu6"]

[sub_resource type="Gradient" id="Gradient_ikn3w"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.2058, 0.528383, 0.98, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_rdfmk"]
gradient = SubResource("Gradient_ikn3w")

[node name="MapEditor" type="Control"]
process_mode = 3
modulate = Color(1, 1, 1, 0)
z_index = 1000
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ikn3w")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_set = ExtResource("2_rdfmk")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="LeftPanel" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -360.0
offset_right = 256.0
offset_bottom = 360.0
grow_vertical = 2

[node name="BottomPanel" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -640.0
offset_top = -128.0
offset_right = 640.0
grow_horizontal = 2
grow_vertical = 0

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/BottomPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -640.0
offset_top = -128.0
offset_right = 640.0
grow_horizontal = 2
grow_vertical = 0
texture = SubResource("GradientTexture1D_rdfmk")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/BottomPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ButtonMove" type="TextureButton" parent="CanvasLayer/BottomPanel/HBoxContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
toggle_mode = true
button_pressed = true
action_mode = 0
texture_normal = ExtResource("1_l5hcm")
texture_pressed = ExtResource("4_8qdu6")

[node name="ButtonPaint" type="TextureButton" parent="CanvasLayer/BottomPanel/HBoxContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
toggle_mode = true
action_mode = 0
texture_normal = ExtResource("1_l5hcm")
texture_pressed = ExtResource("4_8qdu6")

[node name="ButtonErase" type="TextureButton" parent="CanvasLayer/BottomPanel/HBoxContainer"]
layout_mode = 2
toggle_mode = true
action_mode = 0
texture_normal = ExtResource("1_l5hcm")
texture_pressed = ExtResource("4_8qdu6")

[connection signal="toggled" from="CanvasLayer/BottomPanel/HBoxContainer/ButtonMove" to="." method="_on_button_move_toggled"]
[connection signal="toggled" from="CanvasLayer/BottomPanel/HBoxContainer/ButtonPaint" to="." method="_on_button_paint_toggled"]
[connection signal="toggled" from="CanvasLayer/BottomPanel/HBoxContainer/ButtonErase" to="." method="_on_button_erase_toggled"]
